--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="images/school.jpeg" alt="" /></div>
+			<div class="image"><a href="https://github.com/sajankc999/School_management_system" target="_blank"><img src="images/school.jpeg" alt="" /></a></div>
 			<div class="content">
 				<h2>School Management system <br />
 				</h2>
